# pyfvm

./: .gitignore  .travis.yml  COPYING  ChangeLog  LICENSE.txt  Makefile  README  README.md  __init__.py  base.py  justfile  mesh.py  mesh2d.py  mesh2d_shell.py  mesh3d.py  mesh_reader.py  meshpy_interface.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
doc/: Makefile  conf.py  index.rst  pyfvm.meshTetra.rst  pyfvm.meshTri.rst  pyfvm.reader.rst  refs.bib  voropy.meshTetra.rst  voropy.meshTri.rst  voropy.reader.rst
examples/: ball  ball.py  bratu_example_test.py  complex_energy.py  complex_energy_test.py  convection_example_test.py  convert_mesh.py  cube  cube.py  cylinder_tri.py  delaunay_checker  delaunay_checker.py  delaunay_maker  ellipse  ellipse.py  ginzburg_landau_example_test.py  hexagon.py  lshape  lshape.py  lshape3d  lshape3d.py  magnetic_vector_potentials.py  magnetic_vector_potentials.pyx  moebius2_tri  moebius_tri  moebius_tri.py  neumann_example_test.py  pacman.py  poisson_example_test.py  rectangle  rectangle.py  rectangle_with_hole.py  setup.py  simple_arrow.py  simple_shell  singular_perturbation_example_test.py  sphere  sphere.py  test_bratu.py  test_complex_energy.py  (+9 more)
experimental/: mesh2d_shell.py
nfc/: form-compiler  nfl.py
pyfvm/: __about__.py  __init__.py  base.py  discretize.py  discretize_edge_integral.py  discretize_linear.py  form_language.py  fvm_matrix.py  fvm_problem.py  get_fvm_matrix.py  helpers.py  jacobian.py  linear_fvm_problem.py  mesh2d.py  meshTetra.py  meshTri.py  (+4 more)
(+206 files in other folders)
