[metadata]
name = pyfvm
version = 0.3.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Finite volume discretizations for Python
url = https://github.com/nschloe/pyfvm
project_urls =
    Code=https://github.com/nschloe/pyfvm
    Issues=https://github.com/nschloe/pyfvm/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    meshplex
    numpy
    scipy
    sphinxcontrib-bibtex
    sympy
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
